# py-mandelbrot-rs

./: .gitignore  Cargo.toml  README.md  main.py  mandelbrot.py  pyproject.toml
src/: lib.rs
